fix x overflow bug on mobile in checklist section

--- a/frontend/sass/norent/styles.scss
+++ b/frontend/sass/norent/styles.scss
@@ -276,7 +276,7 @@ $norent-sticky-menu-height: 100px;
   .media-content {
     align-self: center;
     // Fixes bug on Safari that made these content blocks scrollable
-    display: table;
+    display: table-cell;
   }
 }
 
